# tauri-fcm-tool

./: Claude.md  README.md  package.json
.github/workflows/: release.yml
docs/: README.es.md  README.fr.md  README.ja.md  README.ko.md  README.zh-CN.md
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: command.rs  lib.rs
src-tauri/src/fcm/: auth.rs  client.rs  config.rs  exchange.rs  history.rs  message.rs  mod.rs  pkce.rs  template.rs
src/lib/: bindings.ts
src/lib/components/: HistoryView.svelte  SendView.svelte  SettingsView.svelte  Sidebar.svelte  TemplateView.svelte
src/routes/: +layout.svelte  +page.svelte
