[package]
name = "tauri-fcm-tool"
version = "0.1.1"
description = "Tauri FCM Tool - Developer Tools Collection"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-os = "2"
tauri-specta = { version = "2.0.0-rc.21", features = ["derive", "typescript"] }

# async runtime
tokio = { version = "1", features = ["full"] }

# code generation
specta = { version = "2.0.0-rc.22", features = ["chrono"] }
specta-typescript = "0.0.9"

# json & http client
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
base64 = "0.22"
once_cell = "1.21.3"
chrono = { version = "0.4", features = ["serde"] }

# HTTP client for FCM API
reqwest = { version = "0.12", features = ["json"] }

# Random & crypto for PKCE
rand = "0.8"
sha2 = "0.10"

# UUID for history/template IDs
uuid = { version = "1", features = ["v4"] }

# URL encoding & browser opening
urlencoding = "2"
open = "5"

